src/main/antlr4/com/example/minilang/Grammar.g4
grammar Grammar;

separator: (NL | SEMI)+ ;

// Root rule:
program : separator* (def (separator+ def)*)? separator* EOF;

def
    : func  #DFunc
    | stmt    #DStm
    ;

func: typeAnnotation? 'func' ID '(' paramSeparator ')' block
    ;

param: TYPE? ID;

stmt
    : simpleStmt
    | blockStmt
    ;

simpleStmt
    : decl
    | init
    | returnStmt
    | exp
    ;

blockStmt
    : whileStmt
    | doStmt
    | ifStmt
    | block
    ;

block :  '{' separator* (stmt (separator+ stmt)*)? separator* '}' ;

returnStmt: 'return' exp?;

whileStmt: 'while' exp stmt;

doStmt: 'do' exp stmt;

ifStmt
    : 'if' exp block (separator* 'else' (ifStmt | block))?
    ;


// A type annotation: either a simple type (int, double, ...) or an array type ([int], [double], ...)
typeAnnotation
    : TYPE                    # SimpleType
    | DYNARR_START TYPE DYNARR_END  # ArrayType
    ;

decl: typeAnnotation? ID
    ;

init: typeAnnotation? ID ASSIGN exp
    ;


terminator
    : SEMI
    | NL+
    | EOF;

// Precedence-based expression rules
exp
    : assignExpr
    ;

assignExpr
    : orExpr ( (ASSIGN | PLUS_ASSIGN | MINUS_ASSIGN | DIV_ASSIGN | MULT_ASSIGN) assignExpr )?
    ;

orExpr
    : andExpr (OR andExpr)*
    ;

andExpr
    : equalityExpr (AND equalityExpr)*
    ;

equalityExpr
    : relational ( (EQ | NE) relational )*
    ;

relational
    : addExpr ( (GT | LT | GE | LE) addExpr )*
    ;

addExpr
    : mulExpr ( (PLUS | MINUS) mulExpr )*
    ;

mulExpr
    : powerExpr ( (MULTIPLY | DIVIDE | MODULO) powerExpr )*
    ;

powerExpr
    : unaryExpr (POWER powerExpr)?
    ;

unaryExpr
    : (NOT) unaryExpr
    | postfixExpr
    ;

postfixExpr
    : primary postFixOp*
    ;

postFixOp
    : INC
    | DEC
    | DYNARR_START exp DYNARR_END
    | PARAM_START expSeparator PARAM_END
    | DOT ID PARAM_START expSeparator PARAM_END
    ;

primary
    : '(' exp ')'                                        # PrimaryParen
    | INT                                                # PrimaryInt
    | DOUBLE                                             # PrimaryDouble
    | STRING                                             # PrimaryString
    | BOOL                                               # PrimaryBool
    | ID                                                 # PrimaryId
    | DYNARR_START expSeparator DYNARR_END               # PrimaryArrayLiteral
    ;

expSeparator: (exp (',' exp)* )?; //x, y, z
paramSeparator: (param (',' param)* )?; //int x, double y, string z

// java.GrammarLexer Rules
TYPE        : 'int' | 'double' | 'string' | 'bool';
STRING      : '"'  ( '\\' . | ~["\\] )* '"' |
              '\'' ( '\\' . | ~['\\] )* '\'';
INT         : '-'?[0-9]+; //int over double, so if i = 5 it chooses int
DOUBLE      : '-'?[0-9]+ '.'? [0-9]*;
BOOL        : 'true' | 'false';
PLUS_ASSIGN : '+=';
MINUS_ASSIGN: '-=';
MULT_ASSIGN : '*=';
DIV_ASSIGN  : '/=';
PLUS        : '+';
MINUS       : '-';
MULTIPLY    : '*';
DIVIDE      : '/';
POWER       : '**';
MODULO      : '%';
GT          : '>';
LT          : '<';
LE          : '<=';
GE          : '>=';
EQ          : '==';
NE          : '!=';
AND         : 'and';
OR          : 'or';
NOT         : 'not';
DOT         : '.';
ID          : [a-zA-Z_][a-zA-Z0-9_]*; // need help
ASSIGN      : '=';
DYNARR_START : '[';
DYNARR_END   : ']';
PARAM_START : '(';
PARAM_END   : ')';
INC          : '++';
DEC          : '--';
BOM : '\uFEFF' -> skip;


WS : [ \t]+ -> skip;
NL : ('\r'? '\n') ;
SEMI : ';';

// Single-line comments
LINE_COMMENT
    : '//' ~[\r\n]* -> skip
    ;

// Multi-line comments
BLOCK_COMMENT
    : '/*' .*? '*/' -> skip
    ;
